--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -4,14 +4,29 @@ description: Versionshinweise zu CJA für 2023 anzeigen
 feature: Release Notes
 mini-toc-levels: 2
 exl-id: e6668e32-3322-45f6-a575-413c88097e45
-source-git-commit: 51ed4766c0720c437368b460d9b864bc9fc9fc88
+source-git-commit: ad1a4ede8964618834a1235c6ba65ebb899a9be3
 workflow-type: tm+mt
-source-wordcount: '0'
-ht-degree: 0%
+source-wordcount: '1706'
+ht-degree: 88%
 
 ---
 
 # Versionshinweise zu Customer Journey Analytics für 2023
+
+## April 2023 {#april23}
+
+| Funktion | Beschreibung | [Start des Rollouts](/help/release-notes/releases.md) | [Allgemeine Verfügbarkeit](/help/release-notes/releases.md) |
+| ----------- | ---------- | ----- | --- |
+| **Zeilen-/Spaltenfilter für Analytics Source Connector-Streaming** | Der Analytics-Source-Connector in Adobe Experience Platform ermöglicht jetzt das Filtern von Analytics-Daten, mit denen Profile in [Echtzeit-Kundenprofil](https://experienceleague.adobe.com/docs/experience-platform/profile/home.html?lang=de) gefüllt werden. Die Filterung auf Zeilenebene hilft, die Anzahl der mit Profilen verknüpften Ereignisse zu reduzieren. Die Filterung auf Spaltenebene hilft, die Vielfalt der Ereignisse selbst zu reduzieren, und ermöglicht es Ihnen so, die Nutzung von Profilberechtigungen zu optimieren. Diese Filterung gilt nur für Daten, die an das Echtzeit-Kundenprofil und an [Identity Service](https://experienceleague.adobe.com/docs/experience-platform/identity/home.html?lang=de) gesendet werden. **Die Filterung wirkt sich nicht auf die Daten aus, die zur Verwendung in Anwendungen wie Customer Journey Analytics an Data Lake gesendet werden**. [Weitere Informationen](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=de#filtering-for-profile) | Nicht angegeben | 29. März 2023 |
+| **Datenwörterbuch in Analysis Workspace** | Das Datenwörterbuch hilft Benutzenden und Admins, die Komponenten (Dimensionen, Metriken) in ihrer CJA-Umgebung zu verfolgen, zu verwalten und besser zu verstehen. [Weitere Informationen](/help/components/data-dictionary/data-dictionary-overview.md) | 8. März 2023 | 29. März 2023 |
+| **Link-Freigabe für Projekte (keine Anmeldung erforderlich)** | <p>Sie können jetzt schreibgeschützte Links zu Analysis Workspace-Projekten für Personen freigeben, die keinen Zugriff auf Adobe Analytics haben. Dazu gehört die Freigabe für Personen außerhalb Ihres Unternehmens oder für Mitarbeiter innerhalb Ihres Unternehmens, die nicht für Customer Journey Analytics bereitgestellt werden. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/curate-share/share-projects.html?lang=en#share-public-link)</p> <p>Diese Funktion ist standardmäßig aktiviert und kann vom Systemadministrator deaktiviert werden. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/user-preferences.html?lang=en#company-preferences)</p> | 3. Mai 2023 | Juni 2023 |
+| **Adobe Product Analytics - Nur privater Beta-Zugriff** | Am 21. März 2023 kündigte Adobe die Adobe Product Analytics an, eine neue Methode zur Interaktion mit kanalübergreifenden Daten und Einblicken in Customer Journey Analytics. Diese neuen Funktionen ermöglichen es Produktteams, Daten und Einblicke in ihr Produkterlebnis mithilfe geführter Analyse-Workflows &#x200B; selbst bereitzustellen. Teams können:<ul><li>Verstehen Sie Muster der Benutzerinteraktion im Zeitverlauf &#x200B;</li><li>Analysieren des Wachstums der &#x200B;</li><li>Identifizieren Sie Reibungspunkte in einer Sequenz von Schritten&#x200B;</li><li>Auswirkungen der Versionen von Funktionen messen&#x200B;</li><li>Entdecken Sie aussagekräftige Segmente, um während des gesamten Lebenszyklus des Journey mit dem Produkt zu interagieren und zu pflegen &#x200B;</li><li>Öffnen Sie in Analysis Workspace für eine tiefere Analyse und Zusammenarbeit mit Analysten und vieles mehr! &#x200B;</li></ul>Wenn Sie CJA-Kunde sind und an der privaten Beta-Phase teilnehmen möchten, wenden Sie sich an Ihr Adobe Account Team. [Weitere Informationen](https://business.adobe.com/products/product-analytics/adobe-product-analytics.html) | Nicht angegeben | 17. Juli 2023 |
+
+{style="table-layout:auto"}
+
+## Fehlerbehebungen in Customer Journey Analytics
+
+AN-313118; AN-313390; AN-314135; AN-316381; AN-316811
 
 ## März 2023 {#mar23}
 
@@ -21,7 +36,7 @@ ht-degree: 0%
 | Daten-Storys in mobilen Dashboards | Mit Daten-Storys können Sie mehrere anpassbare Detailansichten zu Kacheln in mobilen Scorecard-Projekten hinzufügen. Verwenden Sie Daten-Storys, um tiefer in wichtige Treiber, zugehörige Metriken und verschiedene Schritte während der Customer Journey einzutauchen. Sie können einfach durch diese Ansichten wischen, um die ganze Story hinter Ihren Schlüsselmetriken zu verstehen. | Weitere Informationen | Nicht angegeben | 8. März 2023 |
 | Ablaufdaten für geplante Projekte | Sie können die maximalen Ablaufdaten für geplante Projekte auf bis zu ein Jahr festlegen, unabhängig von der Häufigkeit des Zeitplans. | Weitere Informationen | Nicht angegeben | 8. März 2023 |
 | Link-Freigabe für Projekte (keine Anmeldung erforderlich) – Nur privater Beta-Zugriff | Sie können jetzt schreibgeschützte Links zu Analysis Workspace-Projekten für Personen freigeben, die keinen Zugriff auf CJA haben. Sie können Projekt-Links für Personen außerhalb Ihrer Organisation oder für Personen innerhalb Ihrer Organisation freigeben, die nicht für CJA vorgesehen sind. Weitere Informationen Wenden Sie sich an Ihr Adobe Account-Team, um der privaten Beta beizutreten. | 26. April 2023 | Juni 2023 |
-| Aktualisierungen des Datumsbereichs des Bedienfelds | In Workspace wurden die folgenden Verbesserungen hinzugefügt:<ul><li>Ab der Februar-Version basieren Dimensionselemente und Datenvorschauen auf dem Datumsbereich des Bedienfelds und nicht auf den letzten 90 Tagen.</li><li>Alle aufgelisteten Dimensionselemente basieren auf Daten innerhalb des Datumsbereichs des Bedienfelds. Wenn ein Dimensionselement Daten außerhalb des Datumsbereichs enthält, können Sie zusätzliche Daten über den Datumsbereich hinaus am unteren Rand der Liste anzeigen.</li><li>Dimensionen ohne Daten können in der linken Leiste angezeigt werden. Klicken Sie auf [!UICONTROL Mehr anzeigen] Optionen zum Anzeigen von Dimensionselementen mit Daten außerhalb des Datumsbereichs des Bedienfelds.</li><li>Die Datenvorschau im Segment und die Generator für berechnete Metriken basieren auf dem Datumsbereich des Bedienfelds, es sei denn, der Zugriff erfolgt über die Komponentenmanager, die kein Bedienfeld haben und weiterhin auf den letzten 90 Tagen basieren.</li><li>Datenvorschau zeigt Daten oder Komponenten basierend auf dem Datumsbereich des Bedienfelds an.</li></ul> | Nicht angegeben | 8. Februar 2023 |
+| Aktualisierungen des Datumsbereichs des Bedienfelds | In Workspace wurden die folgenden Verbesserungen hinzugefügt:<ul><li>Ab der Februarversion basieren Dimensionselemente und Datenvorschauen auf dem Datumsbereich des Bedienfelds und nicht auf den letzten 90 Tagen.</li><li>Alle aufgelisteten Dimensionselemente basieren auf Daten innerhalb des Datumsbereichs des Bedienfelds. Wenn ein Dimensionselement Daten außerhalb des Datumsbereichs enthält, können Sie zusätzliche Daten über den Datumsbereich hinaus unten in der Liste anzeigen.</li><li>Dimensionen ohne Daten können in der linken Leiste angezeigt werden. Klicken Sie auf [!UICONTROL Mehr anzeigen] Optionen zum Anzeigen von Dimensionselementen mit Daten außerhalb des Datumsbereichs des Bedienfelds.</li><li>Datumsvorschauen im Segment Builder und im Generator für berechnete Metriken basieren auf dem Datumsbereich des Bedienfelds, sofern der Zugriff nicht über die Komponenten-Manager erfolgt, die über kein verknüpftes Bedienfeld verfügen und weiterhin auf den letzten 90 Tagen basieren.</li><li>Bei Datenvorschauen werden Daten oder Komponenten basierend auf dem Datumsbereich des Bedienfelds angezeigt.</li></ul> | Nicht angegeben | 8. Februar 2023 |
 
 {style="table-layout:auto"}
 
@@ -44,7 +59,7 @@ AN-309729; AN-309975; AN-311779; AN-313095
 | **Aktualisierung für CJA-Zielgruppen** | Nachdem Sie eine Zielgruppe erstellt haben, erstellt Adobe für jede neue CJA-Zielgruppe ein Experience Platform-Streaming-Segment. Ein Streaming-Segment wird nur dann erstellt, wenn für Ihre Organisation Streaming-Segmentierung eingerichtet ist. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-components/audiences/publish.html?lang=de#after-audience-created) | Nicht angegeben | 3. Februar 2023 |
 | **Ausblenden von Datumsbereichen für den Vergleich in mobilen Scorecards** | Bei mobilen Scorecards können Sie jetzt Vergleichsdatumsbereiche ausblenden. | Nicht angegeben | 8. Februar 2023 |
 | **Kalenderaktualisierungen in Workspace** | <ul><li>Ankerbedienfielddaten: Sie können die Datumsbereichskomponenten im Verhältnis zum Bedienfeldkalender festlegen. [Weitere Informationen](/help/components/date-ranges/calendar.md)</li><li>Aktualisierungen des Kalenderstils: Die Kalenderstile in der gesamten Benutzeroberfläche wurden aktualisiert, um einen konsistenteren und benutzerfreundlicheren Workflow zu bieten.</li><li>Aktualisierungen der Kalenderformel: Wenn Sie relative Daten verwenden, spiegeln alle Kalenderformeln den Beginn des Bedienfelddatumsbereichs wider. [Weitere Informationen](/help/components/date-ranges/calendar.md)</li></ul> | Nicht angegeben | 8. Februar 2023 |
-| **Aktualisierungen des Datumsbereichs des Bedienfelds** | In Workspace wurden die folgenden Verbesserungen hinzugefügt:<ul><li>Ab der Februar-Version basieren Dimensionselemente und Datenvorschauen auf dem Datumsbereich des Bedienfelds und nicht auf den letzten 90 Tagen. </li><li>Alle aufgelisteten Dimensionselemente basieren auf Daten innerhalb des Datumsbereichs des Bedienfelds. Wenn ein Dimensionselement Daten außerhalb des Datumsbereichs enthält, können Sie zusätzliche Daten über den Datumsbereich hinaus am unteren Rand der Liste anzeigen.</li><li>Dimensionen ohne Daten können in der linken Leiste angezeigt werden. Klicken Sie auf die Optionen Weitere Optionen anzeigen , um Dimensionselemente mit Daten außerhalb des Datumsbereichs des Bedienfelds anzuzeigen.</li><li>Die Datenvorschau im Segment und die Generator für berechnete Metriken basieren auf dem Datumsbereich des Bedienfelds, es sei denn, der Zugriff erfolgt über die Komponentenmanager, die kein Bedienfeld haben und weiterhin auf den letzten 90 Tagen basieren.</li><li>Datenvorschau zeigt Daten oder Komponenten basierend auf dem Datumsbereich des Bedienfelds an.</li></ul> | Nicht angegeben | 8. Februar 2023 |
+| **Aktualisierungen des Datumsbereichs des Bedienfelds** | In Workspace wurden die folgenden Verbesserungen hinzugefügt:<ul><li>Ab der Februarversion basieren Dimensionselemente und Datenvorschauen auf dem Datumsbereich des Bedienfelds und nicht auf den letzten 90 Tagen. </li><li>Alle aufgelisteten Dimensionselemente basieren auf Daten innerhalb des Datumsbereichs des Bedienfelds. Wenn ein Dimensionselement Daten außerhalb des Datumsbereichs enthält, können Sie zusätzliche Daten über den Datumsbereich hinaus unten in der Liste anzeigen.</li><li>Dimensionen ohne Daten können in der linken Leiste angezeigt werden. Klicken Sie auf „Weitere Optionen anzeigen“, um Dimensionselemente mit Daten außerhalb des Datumsbereichs des Bedienfelds anzuzeigen.</li><li>Datumsvorschauen im Segment Builder und im Generator für berechnete Metriken basieren auf dem Datumsbereich des Bedienfelds, sofern der Zugriff nicht über die Komponenten-Manager erfolgt, die über kein verknüpftes Bedienfeld verfügen und weiterhin auf den letzten 90 Tagen basieren.</li><li>Bei Datenvorschauen werden Daten oder Komponenten basierend auf dem Datumsbereich des Bedienfelds angezeigt.</li></ul> | Nicht angegeben | 8. Februar 2023 |
 | **Zeilen-/Spaltenfilter für Adobe Analytics Source Connector-Streaming** | Analytics Source Connector in Adobe Experience Platform ermöglicht jetzt das Filtern von Analytics-Daten, mit denen Profile im [Echtzeit-Kundenprofil](https://experienceleague.adobe.com/docs/experience-platform/profile/home.html?lang=de) vorausgefüllt werden.<p>Die Filterung auf Zeilenebene hilft, die Anzahl der mit Profilen verknüpften Ereignisse zu reduzieren. Die Filterung auf Spaltenebene hilft, die Vielfalt der Ereignisse selbst zu reduzieren, und ermöglicht es Ihnen so, die Nutzung von Profilberechtigungen zu optimieren. Diese Filterung gilt nur für Daten, die an das Echtzeit-Kundenprofil und den [Identity Service](https://experienceleague.adobe.com/docs/experience-platform/identity/home.html?lang=de) gesendet werden.<p>**Die Filterung wirkt sich nicht auf die Daten aus, die zur Verwendung in Anwendungen wie Customer Journey Analytics an Data Lake gesendet werden**. [Weitere Informationen](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=de#filtering-for-profile) | Nicht angegeben | Verschoben auf den 29. März 2023 |
 
 {style="table-layout:auto"}
